--- a/packages/core/src/components/time-picker/time-picker.scss
+++ b/packages/core/src/components/time-picker/time-picker.scss
@@ -9,7 +9,9 @@
 
 @import 'common-variables';
 @import 'mixins/shadow-dom/component';
-@import 'components/form/input';
+@import 'mixins/input';
+
+@include form;
 
 :host {
   @include ix-component;
